...

  List<Widget> _getView(AppLocalizations loc) {
    List<Widget> r = [
      Text(loc.ipOrHostPort, style: const TextStyle(color: Colors.blue)),
      Semantics(
        container: true,
        identifier: 'cert_target_autocomplete',
        child: Autocomplete<String>(
          initialValue: TextEditingValue(text: _target),
          fieldViewBuilder: (context, controller, focusNode, onFieldSubmitted) {
            return TextFormField(
              controller: controller,
              focusNode: focusNode,
...
              children: _getView(loc),
            ),
          ),
        ),
        floatingActionButton: Semantics(
          container: true,
          identifier: 'cert_fab',
          child: FloatingActionButton(
            onPressed: () {
              _getCert(loc);
            },
            child: _process ? const Icon(Icons.stop, color: Colors.red) : const Icon(Icons.play_circle),
          ),
...
