...
    const h = 35.0;
    return Scaffold(
      appBar: AppBar(
        title: Semantics(
          identifier: 'main_app_bar_title',
          child: Text(MediaQuery.of(context).size.width > 400
              ? 'TWSNMP For Mobile'
              : 'TWSNMP'),
        ),
        actions: [
          Semantics(
            identifier: 'search_button',
            child: IconButton(
...
                                      ]),
                                    )),
                                PopupMenuItem<String>(
                                    height: h,
                                    value: "snmp",
                                    child: Semantics(
                                      identifier: 'node_menu_item_snmp',
                                      child: Row(children: [
                                        const Icon(Icons.storage),
                                        const SizedBox(width: 8),
                                        Text(loc.mibBrowser, style: const TextStyle(fontSize: 14)),
                                      ]),
                                    )),
...
                                      ]),
                                    )),
                                PopupMenuItem<String>(
                                    height: h,
                                    value: "hrmib",
                                    child: Semantics(
                                      identifier: 'node_menu_item_hrmib',
                                      child: Row(children: [
                                        const Icon(Icons.data_usage),
                                        const SizedBox(width: 8),
                                        Text(loc.hostResource, style: const TextStyle(fontSize: 14)),
                                      ]),
                                    )),
...
                                      ]),
                                    )),
                                PopupMenuItem<String>(
                                    height: h,
                                    value: "cert",
                                    child: Semantics(
                                      identifier: 'node_menu_item_cert',
                                      child: Row(children: [
                                        const Icon(Icons.security),
                                        const SizedBox(width: 8),
                                        Text(loc.cert, style: const TextStyle(fontSize: 14)),
                                      ]),
                                    )),
...
