...
              ],
            ),
          ),
        ),
        floatingActionButton: Semantics(
          container: true,
          identifier: 'hrmib_fab',
          child: FloatingActionButton(
            onPressed: () {
              if (_timer != null) {
                _stop();
              } else {
                _start();
...
