{
    "edit": "Edit",
    "delete": "Delete",
    "panel": "Panel",
    "traffic": "Traffic",
    "editNode": "Edit Node",
    "icon": "Icon",
    "nodeName": "Node Name",
    "nameHint": "The name of the node.",
    "nameError": "Node name is required",
    "ip": "IP Address",
    "ipHint": "IP address of the node",
    "ipError": "IP address is required",
    "community": "Community",
    "communityHint": "SNMP Community",
    "communityError": "Invalid coummunity",
    "laptop": "Laptop",
    "desktop": "Desktop",
    "lan": "LAN",
    "cloud": "Cloud",
    "server": "Server",
    "pingCount":"Count",
    "pingCountHint":"Ping Count",
    "pingTimeout":"Timeout",
    "pingTimeoutHint":"Ping Timeout",
    "pingTTL":"TTL",
    "pingTTLHint":"Ping TTL",
    "start":"Start",
    "stop":"Stop",
    "max": "Max",
    "min": "Min",
    "mean": "Mean",
    "median": "Median",
    "sd": "Standard Deviation",
    "mibName":"Object name",
    "mibValue": "Value",
    "interval": "Interval",
    "showAllPort": "Show all port",
    "target": "Target",
    "settings": "Settings",
    "count": "Count",
    "timeout": "Timeout",
    "retry": "Retry",
    "sec": "Sec",
    "mibBrowser": "MIB Browser",
    "hostResource": "Host Resource",
    "processes": "Processes",
    "port": "TCP/UDP Port List",
    "key": "Name",
    "value": "Value",
    "path": "Path",
    "type": "Type",
    "status": "Status",
    "showProcessMode": "Process Sort Mode",
    "processName": "Process Name",
    "cert": "Server Certificate",
    "verify": "Verify",
    "subject": "Subject",
    "issuer": "Issuer",
    "startValidity": "Start Validity",
    "endValidity": "End Validity",
    "version": "Version",
    "certDur": "Days of Validity",
    "serialNumber": "Serial Number",
    "signatureAlgorithm": "Signature Algorithm",
    "sha1Thumbprint": "SHA1 Thumbprint",
    "sha256Thumbprint": "SHA256 Thumbprint",
    "algorithmReadableName": "Algorithm",
    "keyLength": "Key Length",
    "keySha1Thumbprint": "Key SHA1 Thumbprint",
    "keySha256Thumbprint": "Key SHA256 Thumbprint",
    "subjectAlternativNames": "Subject Alternativ Names",
    "cRLDistributionPoints": "CRL Distribution Points",
    "ipOrHostPort": "IP or Host Name :Port",
    "getIPFromName": "Get IP",
    "serverTest": "Server Test",
    "requiredError": "This field is required",
    "syslogMsg": "Syslog Message",
    "facility": "Facility",
    "severity": "Severity",
    "timeStamp": "Time",
    "length": "Length",
    "host": "Host Name",
    "trapOID": "SNMP Trap OID",
    "dhcpPort": "Monitor Port",
    "dhcpAddress": "From Address",
    "dhcpType": "DHCP Type",
    "user": "User",
    "password": "Password",
    "mailFrom": "From",
    "mailTo": "To",
    "time": "Time",
    "mailSubject": "Subject",
    "mailBody": "Message",
    "search": "Search",
    "ipOrHost": "IP or Host Name",
    "rrType": "DNS Record Type",
    "macAddress": "MAC Address",
    "vendorCode": "Vendor Code",
    "vendorName": "Vendor Name",
    "tx": "Tx",
    "rx": "Rx",
    "error": "Error",
    "themeMode": "Theme",
    "themeModeSystem": "System",
    "themeModeLight": "Light",
    "themeModeDark": "Dark",
    "language": "Language",
    "languageSystem": "System",
    "languageEnglish": "English",
    "languageJapanese": "Japanese",
    "save":"Save",
    "checkPing": "Check PING",
    "checkCertConfig": "Check Server Certificate",
    "runPing": "Run PING Checks",
    "runCert": "Run Cert Checks",
    "checking": "Checking...",
    "checkCompletedCount": "Completed Nodes",
    "checkProblemCount": "Problem Nodes",
    "checkingNode": "Checking",
    "checkFinished": "Check Finished",
    "addNode": "Add Node",
    "beep": "BEEP"
}
