{
    "edit": "編集",
    "delete": "削除",
    "panel": "パネル",
    "traffic": "トラフィック",
    "editNode": "ノードの編集",
    "icon": "アイコン",
    "nodeName": "ノード名",
    "nameHint": "ノードに好きな名前をつけてください。",
    "nameError": "ノード名は必須です。",
    "ip": "IPアドレス",
    "ipHint": "ノードのIPアドレスです。",
    "ipError": "IPアドレスが正しくありません。",
    "community": "Community",
    "communityHint": "SNMPのCommunityです。",
    "communityError": "Coummunity正しくありません。",
    "laptop": "ノートPC",
    "desktop": "デスクトップPC",
    "lan": "ネットワーク機器",
    "cloud": "クラウド",
    "server": "サーバー",
    "pingCount":"回数",
    "pingCountHint":"Pingの実行回数",
    "pingTimeout":"タイムアウト",
    "pingTimeoutHint":"Pingのタイムアウトです。",
    "pingTTL":"TTL",
    "pingTTLHint":"PingのTTLです。",
    "start":"開始",
    "stop":"停止",
    "max": "最大",
    "min": "最小",
    "mean": "平均",
    "median": "中央値",
    "sd": "標準偏差",
    "mibName":"オブジェクト名",
    "mibValue": "値",
    "interval": "周期",
    "showAllPort": "内部ポートも表示",
    "target": "取得対象",
    "settings": "設定",
    "count": "回数",
    "timeout": "タイムアウト",
    "retry": "リトライ",
    "sec": "秒",
    "mibBrowser": "MIBブラウザー",
    "hostResource": "ホストリソース",
    "processes": "プロセス",
    "port": "TCP/UDPポート",
    "key": "項目",
    "value": "値",
    "path": "パス",
    "type": "種別",
    "status": "状態",
    "showProcessMode": "プロセスのソート順",
    "processName": "プロセス名",
    "cert": "サーバー証明書",
    "verify": "検証結果",
    "subject": "サブジェクト",
    "issuer": "発行者",
    "startValidity": "有効期限開始",
    "endValidity": "有効期限終了",
    "certDur": "有効日数",
    "version": "バージョン",
    "serialNumber": "シリアル番号",
    "signatureAlgorithm": "署名アルゴリズム",
    "sha1Thumbprint": "SHA1ハッシュ値",
    "sha256Thumbprint": "SHA256ハッシュ値",
    "algorithmReadableName": "公開鍵アルゴリズム",
    "keyLength": "公開鍵長",
    "keySha1Thumbprint": "公開鍵SHA1ハッシュ値",
    "keySha256Thumbprint": "公開会議SHA256ハッシュ値",
    "subjectAlternativNames": "サブジェクト別名",
    "cRLDistributionPoints": "CRL配布ポイント",
    "ipOrHostPort": "IPまたはホスト名:ポート番号",
    "getIPFromName": "IP検索",
    "serverTest": "サーバーテスト",
    "requiredError": "この項目は必須です。",
    "syslogMsg": "メッセージ",
    "facility": "ファシリティー",
    "severity": "優先度",
    "timeStamp": "日時",
    "length": "長さ",
    "host": "ホスト名",
    "trapOID": "SNMP Trap種別",
    "dhcpPort": "モニタするポート",
    "dhcpAddress": "送信元",
    "dhcpType": "メッセージ",
    "time": "時刻",
    "user": "ユーザー",
    "password": "パスワード",
    "mailFrom": "送信元",
    "mailTo": "宛先",
    "mailSubject": "件名",
    "mailBody": "メッセージ",
    "search": "検索",
    "ipOrHost": "IPアドレスまたはホスト名",
    "rrType": "DNSレコードタイプ",
    "macAddress": "MACアドレス",
    "vendorCode": "ベンダーコード",
    "vendorName": "ベンダー名",
    "tx": "送信",
    "rx": "受信",
    "error": "エラー",
    "themeMode": "テーマ",
    "themeModeSystem": "システム設定",
    "themeModeLight": "ライト",
    "themeModeDark": "ダーク",
    "language": "言語",
    "languageSystem": "システム設定",
    "languageEnglish": "英語",
    "languageJapanese": "日本語",
    "save":"保存",
    "checkPing": "PINGチェック",
    "checkCertConfig": "サーバー証明書チェック",
    "runPing": "PING実行",
    "runCert": "証明書チェック実行",
    "checking": "確認中...",
    "checkCompletedCount": "チェック完了のノード数",
    "checkProblemCount": "問題のあるノード数",
    "checkingNode": "チェック中のノード名",
    "checkFinished": "完了",
    "addNode": "ノードの追加",
    "beep": "ビープ音"
}