appId: jp.co.twise.twsnmpfm
---
- launchApp:
    clearState: true
- runFlow:
    file: subflow/setup_cert_ng_node.yaml
- tapOn:
    id: "node_menu_button_0"
- waitForAnimationToEnd
- tapOn:
    id: "node_menu_item_cert"
- extendedWaitUntil:
    visible:
      id: "cert_fab"
    timeout: 10000
- tapOn:
    id: "cert_fab"
- waitForAnimationToEnd
