appId: jp.co.twise.twsnmpfm
---
- launchApp:
    clearState: true
- startRecording: maestro/demo/record/cert
- runFlow:
    file: ../subflow/setup_cert_ok_node.yaml
- tapOn:
    id: "node_menu_button_0"
- waitForAnimationToEnd
- tapOn:
    id: "node_menu_item_cert"
- extendedWaitUntil:
    visible:
      id: "cert_fab"
    timeout: 10000
- tapOn:
    id: "cert_fab"
- extendedWaitUntil:
    visible:
      id: "this_id_does_not_exist"
    timeout: 5000
    optional: true
- stopRecording
