appId: jp.co.twise.twsnmpfm
---
- launchApp:
    clearState: true
- startRecording: maestro/demo/record/mib_browser
- runFlow:
    file: ../subflow/setup_ok_node.yaml
- tapOn:
    id: "node_menu_button_0"
- waitForAnimationToEnd
- tapOn:
    id: "node_menu_item_snmp"
- extendedWaitUntil:
    visible:
      id: "mib_name_autocomplete"
    timeout: 10000
- tapOn:
    id: "mib_browser_fab"
- extendedWaitUntil:
    visible:
      id: "mib_browser_table"
    timeout: 30000
- stopRecording
